--- a/거래이력_kjc/train.ipynb
+++ b/거래이력_kjc/train.ipynb
@@ -2395,11 +2395,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ab5ff349",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([165, 204,  -1,  44,   4,   0,  26, 661, 206, 128,  10,  16, 791,\n",
+       "        12, 121, 360,  94, 883, 164, 133,  52, 120, 177, 143,  79,  37,\n",
+       "        33,   5,  68,   2,  84,  35, 443,   3, 836, 502,  93, 189,  67,\n",
+       "       129,  27, 405,  66, 210,   6,  40, 240,  32, 317, 192, 272, 263,\n",
+       "       125, 490, 135, 261, 292,  58, 396, 367,  90, 137, 394, 215, 630,\n",
+       "        29, 112, 159, 193,  17,   7, 663, 197, 115,  22, 796, 107, 345,\n",
+       "        85, 896, 167,  38, 131, 149, 144,  78,   8,  30,  77,  48, 483,\n",
+       "       823, 500,  53, 203,  95, 329, 108, 183, 213, 299, 176, 267, 132,\n",
+       "       260, 231, 275,  43,  21, 378, 327, 100, 401, 200, 660, 141,  83,\n",
+       "       169, 180,  47,  41, 659,  96, 794,   1,  86, 330, 874,  25, 113,\n",
+       "       161,  97,  87,  82,  59, 517, 815, 501,  20,  60, 208, 313, 104,\n",
+       "       170, 205,  91, 306, 259, 520, 139,  24, 266, 238, 229, 374, 101,\n",
+       "       194, 657,  61, 109, 162,  50,  42, 670,  89,  28, 797,  70, 316,\n",
+       "       862, 182,  34,  19,  99,  81,  80, 566, 813, 508,  71,  74, 201,\n",
+       "        75, 155, 196,  31, 296, 178, 254, 535, 150,  54, 269, 239, 220,\n",
+       "        15, 375, 303, 118, 417, 198, 653, 138, 154, 179,  56, 679, 800,\n",
+       "        65,  18, 870, 166,  23, 105, 607, 812, 512,  14, 281, 152, 294,\n",
+       "       114, 343, 249, 539, 160, 246, 218, 373, 291, 413, 207, 675, 147,\n",
+       "       683, 153,  92,  46, 809, 300, 891, 110, 126, 610, 808, 516, 181,\n",
+       "        55, 289, 546, 242, 371, 286, 134, 433, 223, 662, 186])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans_history[\"이용건수_신용_R12M\"].unique()"
+   ]
   },
   {
    "cell_type": "code",
